--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,5 +31,9 @@
             android:name=".ui.file.FileActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".ui.detection.DetectionActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
